fix tenant name too long bug

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -784,6 +784,8 @@ table a{
   margin:0;
   padding:0;
   float: right;
+  position: absolute;
+  right: 0;
   cursor: pointer;
 }
 .ta-zg{
